@@ -310,6 +310,12 @@ Force the Modules Package to believe that no modules are currently loaded.
 Unload all loaded
 .I modulefiles.
 .TP 15
+.B refresh
+Force a refresh of all non-persistent components of currently loaded modules.
+This should be used on derived shells where aliases need to be reinitialized
+but the environment variables have already been set by the currently loaded
+modules.
+.TP 15
 .B whatis [modulefile [modulefile...]]
 Display the modulefile information set up by the \fImodule-whatis\fP commands
 inside the specified modulefiles. If no modulefiles are specified all whatis
