@@ -55,11 +55,14 @@ Modules 3.2.0
 
 	Contributor:
 	 	Andrew Ruder  		<aer@absoft.com>
-
 	* cmdConflict.c: Fixed memory allocation bug in cmdPrereq().
 	  When there is more than 1 argument to the prereq command, both
 	  savedlens and savedlists were indexed past what the initial malloc
 	  allowed.
+	* ModuleCmd_Refresh.c: Like "update" but refreshes only the
+	  non-persistent attributes of the currently loaded modules,
+	  regardless of the state of the loaded modules (i.e. refresh
+	  aliases).
 
 	Contributor:
 	 	Mark Lakata  		<lakata@mips.com>
@@ -70,7 +73,7 @@ Modules 3.2.0
 	  is the same as "module switch foo foo/1.3"
 	* bug fix in cmdXResources regarding parsing the XRDB
 	* removed probetcl from distribution; function moved to aclocal.m4
-        * special shell chars in env vars are escaped rather than
+	* special shell chars in env vars are escaped rather than
 	  quoted. This allows the use of single quotes inside the env var
 	* noglob option turned on for module command in csh/tcsh
 	* use customed temp file routine, rather than tmpnam or tempnam
